syntax = "proto2";

import "rpc/enum.proto";

package rpc;

message EntryMeta {
  required int64 term = 1;
  required EntryType type = 2;
  repeated string peers = 3;
  optional int64 data_len = 4;
  repeated string old_peers = 5;
};

message RequestVoteRequest {
  required string group_id = 1;
  required string server_id = 2;
  required string peer_id = 3;
  required int64 term = 4;
  required int64 prev_log_term = 5;
  required int64 prev_log_index = 6;
  required bool pre_vote = 7;
};

message RequestVoteResponse {
  required int64 term = 1;
  required bool granted = 2;
};

service RaftService {
  rpc preVote(RequestVoteRequest) returns (stream RequestVoteResponse);

  rpc requestVote(RequestVoteRequest) returns (stream RequestVoteResponse);
};